clusters/k3s-test/53-headlamp/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: headlamp
  namespace: headlamp
spec:
  parentRefs:
    - kind: Gateway
      name: cilium
      namespace: gateway
      sectionName: https
  hostnames:
    - "headlamp.lab.raphlamenace.xyz"
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: headlamp
          port: 80
